--- a/forms/validation.html
+++ b/forms/validation.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>驗證</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title > 驗證 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">驗證</h1><small>檔名：<code>validation.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted"> 驗證 </h1><small > 檔名：<code>validation.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>自定義樣式</h2>
-<h6>為了自定義 Bootstrap 表單驗證訊息，您需要將布林屬性 <code>novalidate</code> 添加到 <code>&lt;form&gt;</form></code> 中。這將會禁用瀏覽器預設的回饋工具提示，不過 JavaScript 的表單驗證 API 依然有效。</h6>
+<h2> 自定義樣式 </h2>
+<h6> 為了自定義 Bootstrap 表單驗證訊息，您需要將布林屬性 <code>novalidate</code> 添加到 <code>&lt;form&gt;</form></code> 中。這將會禁用瀏覽器預設的回饋工具提示，不過 JavaScript 的表單驗證 API 依然有效。</h6>
 
-<p>如何啟用 JavaScript 驗證</p>
+<p> 如何啟用 JavaScript 驗證 </p>
 <ol>
-  <li>表單加入 novalidate 屬性</li>
-  <li>表單加入 needs-validation className(名稱可自訂)</li>
-  <li>加入 valid-feedback, invalid-feedback 回應結果</li>
-  <li>加入 JavaScript 驗證片段程式碼</li>
+  <li> 表單加入 novalidate 屬性 (在 html 表示不要對這個表單進行驗證)</li>
+  <li> 表單加入 needs-validation className (名稱可自訂)</li>
+  <li> 加入 valid-feedback, invalid-feedback 回應結果 </li>
+  <li> 加入 JavaScript 驗證片段程式碼 </li>
 </ol>
 
 <div class="demo">
-  <form class="row g-3 練習" 練習>
+  <form class="row g-3 needs-validation" novalidate>
     <div class="col-md-4">
       <label for="validationCustom01" class="form-label">First name</label>
       <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-      <!-- <div class="valid-feedback">
+      <div class="valid-feedback">
         Looks good!
-      </div> -->
-      <!-- <div class="invalid-feedback">
+      </div> 
+      <div class="invalid-feedback">
         Looks bad!
-      </div> -->
+      </div>
     </div>
     <div class="col-md-4">
       <label for="validationCustom02" class="form-label">Last name</label>
@@ -84,9 +84,9 @@
 </div>
 
 
-<h2>瀏覽器預設值</h2>
+<h2> 瀏覽器預設值 </h2>
 
-<p>瀏覽器本身就存在著預設驗證功能，但這並不會調整任何樣式</p>
+<p> 瀏覽器本身就存在著預設驗證功能，但這並不會調整任何樣式 </p>
 
 <div class="demo">
   <form class="row g-3">
@@ -134,9 +134,9 @@
   </form>
 </div>
 
-<h2>伺服器端</h2>
+<h2> 伺服器端 </h2>
 
-<p>伺服器端意味著手動加入回饋樣式，回饋樣式包含：</p>
+<p> 伺服器端意味著手動加入回饋樣式，回饋樣式包含：</p>
 
 <ul>
   <li>is-valid, is-invalid</li>
@@ -146,12 +146,13 @@
 <div class="demo">
   <form class="row g-3">
     <div class="col-md-4">
+      <!-- 表示透過後端驗證成功或是失敗必須替 input 加上 class .is-invalid or .is-valid -->
       <label for="validationServer01" class="form-label">First name</label>
-      <input type="text" class="form-control 練習" id="validationServer01" value="Mark" required>
-      <div class="練習">
+      <input type="text" class="form-control is-invalid" id="validationServer01" value="123" required>
+      <div class="valid-feedback">
         Looks good!
       </div>
-      <div class="練習">
+      <div class="invalid-feedback">
         Looks bad!
       </div>
     </div>
@@ -213,18 +214,19 @@
   </form>
 </div>
 
-<h2>支持的元素</h2>
+<h2> 支持的元素 </h2>
 
 <ul>
   <li><code>&lt;input&gt;</code> 和帶有 <code>.form-control</code> 的 <code>&lt;textarea&gt;</code> (在 input 群組中最多包含一個 <code>.form-control</code>)</li>
-  <li>帶有 <code>.form-select</code> 的 <code>&lt;select&gt;</code></li>
+  <li> 帶有 <code>.form-select</code> 的 <code>&lt;select&gt;</code></li>
   <li><code>.form-check</code></li>
 </ul>
 
-<p>.was-validated 是一個狀態，代表已經驗證過（但驗證狀態還是會依據用戶行為再次調整</p>
+<p>.was-validated 是一個狀態，代表已經驗證過（但驗證狀態還是會依據用戶行為再次調整 </p>
 
+<!-- was-validated 表示 整個表單被驗證這個狀態，不代表驗證通過 -->
 <div class="demo">
-  <form class="練習">
+  <form class="was-validated">
     <div class="mb-3">
       <label for="validationTextarea" class="form-label">Textarea</label>
       <textarea class="form-control is-invalid" id="validationTextarea" placeholder="Required example textarea" required></textarea>
@@ -234,7 +236,7 @@
     </div>
   
     <div class="form-check mb-3">
-      <input type="checkbox" class="form-check-input" id="validationFormCheck1" required>
+      <input type="checkbox" class="form-check-input " id="validationFormCheck1" required>
       <label class="form-check-label" for="validationFormCheck1">Check this checkbox</label>
       <div class="invalid-feedback">Example invalid feedback text</div>
     </div>
@@ -270,23 +272,23 @@
   </form>
 </div>
 
-<h2>工具提示</h2>
+<h2> 工具提示 </h2>
 
-<p>加上 valid-tooltip, invalid-tooltip 加上工具提示的視覺效果</p>
+<p> 加上 valid-tooltip, invalid-tooltip 加上工具提示的視覺效果 </p>
 
 <div class="demo">
   <form class="row g-3 needs-validation" novalidate>
     <div class="col-md-4 position-relative">
       <label for="validationTooltip01" class="form-label">First name</label>
       <input type="text" class="form-control" id="validationTooltip01" value="Mark" required>
-      <div class="練習">
+      <div class="valid-tooltip">
         Looks good!
       </div>
     </div>
     <div class="col-md-4 position-relative">
       <label for="validationTooltip02" class="form-label">Last name</label>
       <input type="text" class="form-control" id="validationTooltip02" value="Otto" required>
-      <div class="練習">
+      <div class="invalid-tooltip">
         Looks bad!
       </div>
     </div>
@@ -332,25 +334,24 @@
 
 <script>
   // Example starter JavaScript for disabling form submissions if there are invalid fields
-  // (function () {
-  //   'use strict';
+  (function () {
+    'use strict';
+    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+    var forms = document.querySelectorAll('.needs-validation');
   
-  //   // Fetch all the forms we want to apply custom Bootstrap validation styles to
-  //   var forms = document.querySelectorAll('.needs-validation');
+    // Loop over them and prevent submission
+    Array.prototype.slice.call(forms)
+      .forEach(function (form) {
+      form.addEventListener('submit', function (event) {
+        if (!form.checkValidity()) {
+          event.preventDefault()
+          event.stopPropagation()
+        }
   
-  //   // Loop over them and prevent submission
-  //   Array.prototype.slice.call(forms)
-  //     .forEach(function (form) {
-  //     form.addEventListener('submit', function (event) {
-  //       if (!form.checkValidity()) {
-  //         event.preventDefault()
-  //         event.stopPropagation()
-  //       }
-  
-  //       form.classList.add('was-validated')
-  //     }, false)
-  //   })
-  // })()
+        form.classList.add('was-validated')
+      }, false)
+    })
+  })()
 </script>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -435,7 +436,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -448,7 +449,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -476,7 +477,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
