--- a/forms/floatingLabels.html
+++ b/forms/floatingLabels.html
@@ -1,34 +1,34 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>浮動標籤</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title > 浮動標籤 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">浮動標籤</h1><small>檔名：<code>floatingLabels.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted"> 浮動標籤 </h1><small > 檔名：<code>floatingLabels.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>範例</h2>
+<h2> 範例 </h2>
 
-<p>加入 .form-floating 製作浮動標籤</p>
+<p> 加入 .form-floating 製作浮動標籤 </p>
 
 <div class="demo">
-  <div class="練習 mb-3">
+  <div class="form-floating mb-3">
     <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
     <label for="floatingInput">Email address</label>
   </div>
-  <div class="練習">
+  <div class="form-floating">
     <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
     <label for="floatingPassword">Password</label>
   </div>
 </div>
 
-<h4>如果已經定義 value ，則 <code>&lt;label&gt;</code> 會自動調整為其浮動位置。</h4>
+<h4> 如果已經定義 value ，則 <code>&lt;label&gt;</code> 會自動調整為其浮動位置。</h4>
 
-<p>加入 value 屬性在以下 input</p>
+<p> 加入 value 屬性在以下 input</p>
 
 <div class="demo">
   <form class="form-floating">
-    <input type="email" class="form-control" id="floatingInputValue" placeholder="name@example.com" 練習>
+    <input type="email" class="form-control" id="floatingInputValue" placeholder="name@example.com" value="我是 value 文字">
     <label for="floatingInputValue">Input with value</label>
   </form>
 </div>
 
-<h4>表單驗證樣式也可以按預期運作</h4>
+<h4> 表單驗證樣式也可以按預期運作 </h4>
 
 <div class="demo">
   <form class="form-floating">
@@ -37,34 +37,34 @@
   </form>
 </div>
 
-<h2>文字欄位</h2>
-<h6>預設情況下，帶有 .form-control 的 <code>&lt;textarea&gt;</code> 會跟 <code>&lt;input&gt;</code> 有相同的高度。</h6>
+<h2> 文字欄位 </h2>
+<h6> 預設情況下，帶有 .form-control 的 <code>&lt;textarea&gt;</code> 會跟 <code>&lt;input&gt;</code> 有相同的高度。</h6>
 
-<p>將以下改為 textarea 標籤</p>
+<p> 將以下改為 textarea 標籤 </p>
 
 <div class="demo">
   <div class="form-floating">
-    <練習 class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></練習>
+    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea >
     <label for="floatingTextarea">Comments</label>
   </div>
 </div>
 
-<h4>不要使用 <code>rows</code> 屬性來自定義 <code>&lt;textarea&gt;</code> 的高度，而是使用 height 屬性 (透過行內設定，或是自定義的 CSS)</h4>
-
+<h4> 不要使用 <code>rows</code> 屬性來自定義 <code>&lt;textarea&gt;</code> 的高度，而是使用 height 屬性 (透過行內設定，或是自定義的 CSS)</h4>
+<!--  rows="10" 讓 textarea 顯示 rows 顯示 10 行 -->
 <div class="demo">
   <div class="form-floating">
-    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 練習;"></textarea>
+    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 300px"></textarea>
     <label for="floatingTextarea2">Comments</label>
   </div>
 </div>
 
-<h2>選擇</h2>
+<h2> 選擇 </h2>
 
-<p>為以下套用 .form-floating, form-select</p>
+<p> 為以下套用 .form-floating, form-select</p>
 
 <div class="demo">
-  <div class="練習">
-    <select class="練習" id="floatingSelect" aria-label="Floating label select example">
+  <div class="form-floating">
+    <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
       <option selected>Open this select menu</option>
       <option value="1">One</option>
       <option value="2">Two</option>
@@ -74,17 +74,21 @@
   </div>
 </div>
 
-<h2>排版</h2>
-<h6>請確保將表單元素放在 column 類別裡面</h6>
+<h2> 排版 </h2>
+<h6> 請確保將表單元素放在 column 類別裡面 </h6>
 
-<p>將以下表單套用格線系統</p>
+<p> 將以下表單套用格線系統 </p>
 
 <div class="demo">
-  <div class="form-floating">
+  <div class="row">
+    <div class="col-6">
+        <div class="form-floating">
     <input type="email" class="form-control" id="floatingInputGrid" placeholder="name@example.com" value="mdo@example.com">
     <label for="floatingInputGrid">Email address</label>
-  </div>
-  <div class="form-floating">
+    </div>
+    </div>
+    <div class="col-6">
+        <div class="form-floating">
     <select class="form-select" id="floatingSelectGrid" aria-label="Floating label select example">
     <option selected>Open this select menu</option>
     <option value="1">One</option>
@@ -92,6 +96,8 @@
     <option value="3">Three</option>
     </select>
     <label for="floatingSelectGrid">Works with selects</label>
+  </div>
+    </div>
   </div>
 </div>
 
@@ -178,7 +184,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -191,7 +197,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -219,7 +225,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
