--- a/forms/layout.html
+++ b/forms/layout.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>排版</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title > 排版 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">排版</h1><small>檔名：<code>layout.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted"> 排版 </h1><small > 檔名：<code>layout.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>通用類別</h2>
+<h2> 通用類別 </h2>
 
-<p>使用 mb-{ 1-5 } 調整表單間距</p>
+<p> 使用 mb-{ 1-5 } 調整表單間距 </p>
 
 <div class="demo">
-  <div class="練習">
+  <div class="mb-3">
     <label for="formGroupExampleInput" class="form-label">Example label</label>
     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input placeholder">
   </div>
-  <div class="練習">
+  <div class="mb-3">
     <label for="formGroupExampleInput2" class="form-label">Another label</label>
     <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
   </div>
 </div>
 
-<h2>表單網格</h2>
+<h2> 表單網格 </h2>
 
-<p>使用格線系統排版表單</p>
+<p> 使用格線系統排版表單 </p>
 
 <div class="demo">
-  <div class="練習">
-    <div class="練習">
+  <div class="row">
+    <div class="col-6">
       <input type="text" class="form-control" placeholder="First name" aria-label="First name">
     </div>
-    <div class="練習">
+    <div class="col-6">
       <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
     </div>
   </div>
@@ -34,10 +34,10 @@
 
 <h2>Gutters</h2>
 
-<p>調整表單之間的 gutter</p>
+<p> 調整表單之間的 gutter</p>
 
 <div class="demo">
-  <div class="row 練習">
+  <div class="row gx-2">
     <div class="col">
       <input type="text" class="form-control" placeholder="First name" aria-label="First name">
     </div>
@@ -47,12 +47,12 @@
   </div>
 </div>
 
-<h4>可以使用網格 (Grid) 系統建立更複雜的排版。</h4>
+<h4> 可以使用網格 (Grid) 系統建立更複雜的排版。</h4>
 
-<p>使用格線系統，並加入 g-{ 1-5 } 完成複雜的排版</p>
+<p> 使用格線系統，並加入 g-{ 1-5 } 完成複雜的排版 </p>
 
 <div class="demo">
-  <form class="row 練習">
+  <form class="row g-3">
     <div class="col-md-6">
       <label for="inputEmail4" class="form-label">Email</label>
       <input type="email" class="form-control" id="inputEmail4">
@@ -98,10 +98,10 @@
   </form>
 </div>
 
-<h2>水平表單</h2>
-<h6>透過將 <code>.row</code> 類別加入表單群組來建立使用網格系統的水平表單，並使用 <code>.col-*-*</code> 類別來指定標籤和表單控制 (Form controls) 的寬度。請確保有在 <code>&lt;label&gt;</code> 添加 <code>.col-form-label</code> ，使它們與相關的表單控制垂直置中</h6>
+<h2> 水平表單 </h2>
+<h6> 透過將 <code>.row</code> 類別加入表單群組來建立使用網格系統的水平表單，並使用 <code>.col-*-*</code> 類別來指定標籤和表單控制 (Form controls) 的寬度。請確保有在 <code>&lt;label&gt;</code> 添加 <code>.col-form-label</code> ，使它們與相關的表單控制垂直置中 </h6>
 
-<p>在以下 label 加入 col-form-label 使其對齊</p>
+<p> 在以下 label 加入 col-form-label 使其對齊 </p>
 
 <div class="demo">
   <form>
@@ -154,13 +154,13 @@
   </form>
 </div>
 
-<h2>水平表單標籤尺寸</h2>
+<h2> 水平表單標籤尺寸 </h2>
 
-<p>使用 col-form-label-{ sm, lg } 改變標籤尺寸</p>
+<p> 使用 col-form-label-{ sm, lg } 改變標籤尺寸 </p>
 
 <div class="demo">
   <div class="row mb-3">
-    <label for="colFormLabelSm" class="col-sm-2 col-form-label 練習">Email</label>
+    <label for="colFormLabelSm" class="col-sm-2 col-form-label-sm">Email</label>
     <div class="col-sm-10">
       <input type="email" class="form-control form-control-sm" id="colFormLabelSm" placeholder="col-form-label-sm">
     </div>
@@ -172,49 +172,49 @@
     </div>
   </div>
   <div class="row">
-    <label for="colFormLabelLg" class="col-sm-2 col-form-label 練習">Email</label>
+    <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg">Email</label>
     <div class="col-sm-10">
       <input type="email" class="form-control form-control-lg" id="colFormLabelLg" placeholder="col-form-label-lg">
     </div>
   </div>
 </div>
 
-<h2>欄尺寸</h2>
+<h2> 欄尺寸 </h2>
 
-<p>使用不同 col-{ 中斷點} 製作不同寬度 input</p>
+<p> 使用不同 col-{ 中斷點} 製作不同寬度 input</p>
 
 <div class="demo">
   <div class="row g-3">
     <div class="col-sm-7">
       <input type="text" class="form-control" placeholder="City" aria-label="City">
     </div>
-    <div class="練習">
+    <div class="col-sm-3">
       <input type="text" class="form-control" placeholder="State" aria-label="State">
     </div>
-    <div class="練習">
+    <div class="col-sm-2">
       <input type="text" class="form-control" placeholder="Zip" aria-label="Zip">
     </div>
   </div>
 </div>
 
-<h2>自動調整尺寸</h2>
+<h2> 自動調整尺寸 </h2>
 
-<p>使用 col-auto 符合 input 尺寸</p>
+<p> 使用 col-auto 符合 input 尺寸 </p>
 
 <div class="demo">
   <form class="row gy-2 gx-3 align-items-center">
-    <div class="練習">
+    <div class="col-auto">
       <label class="visually-hidden" for="autoSizingInput">Name</label>
       <input type="text" class="form-control" id="autoSizingInput" placeholder="Jane Doe">
     </div>
-    <div class="練習">
+    <div class="col-auto">
       <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
       <div class="input-group">
       <div class="input-group-text">@</div>
       <input type="text" class="form-control" id="autoSizingInputGroup" placeholder="Username">
       </div>
     </div>
-    <div class="練習">
+    <div class="col-auto">
       <label class="visually-hidden" for="autoSizingSelect">Preference</label>
       <select class="form-select" id="autoSizingSelect">
       <option selected>Choose...</option>
@@ -223,7 +223,7 @@
       <option value="3">Three</option>
       </select>
     </div>
-    <div class="練習">
+    <div class="col-auto">
       <div class="form-check">
       <input class="form-check-input" type="checkbox" id="autoSizingCheck">
       <label class="form-check-label" for="autoSizingCheck">
@@ -231,13 +231,13 @@
       </label>
       </div>
     </div>
-    <div class="練習">
+    <div class="col-auto">
       <button type="submit" class="btn btn-primary">Submit</button>
     </div>
   </form>
 </div>
 
-<h4>你可以再次將其與有指定大小的 column 類別混和使用</h4>
+<h4> 你可以再次將其與有指定大小的 column 類別混和使用 </h4>
 
 <div class="demo">
   <form class="row gx-3 gy-2 align-items-center">
@@ -275,13 +275,13 @@
   </form>
 </div>
 
-<h2>行內表單</h2>
-<h6>使用 <code>.row-cols-*</code> 類別來建立水平排版。</h6>
+<h2> 行內表單 </h2>
+<h6> 使用 <code>.row-cols-*</code> 類別來建立水平排版。</h6>
 
-<p>使用 .row-cols-lg-auto 來套用水平、垂直自動切換的排版形式</p>
+<p> 使用 .row-cols-lg-auto 來套用水平、垂直自動切換的排版形式 </p>
 
 <div class="demo">
-  <form class="row 練習 g-3 align-items-center">
+  <form class="row row-cols-lg-auto g-3 align-items-center">
     <div class="col-12">
       <label class="visually-hidden" for="inlineFormInputGroupUsername">Username</label>
       <div class="input-group">
@@ -397,7 +397,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -410,7 +410,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -438,7 +438,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
