--- a/bs-javascript/js-intro.html
+++ b/bs-javascript/js-intro.html
@@ -1,35 +1,35 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>Bootstrap JS 啟用方法</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title>Bootstrap JS 啟用方法 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Bootstrap JS 啟用方法</h1><small>檔名：<code>js-intro.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Bootstrap JS 啟用方法 </h1><small > 檔名：<code>js-intro.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>使用 data-bs 套用方法</h2>
+<h2> 使用 data-bs 套用方法 </h2>
 
-<p>請至少要載入 CDN 才能使用此方法</p>
+<p> 請至少要載入 CDN 才能使用此方法 </p>
 
 <div class="demo">
   <button type="button" class="btn btn-outline-primary" data-bs-toggle="button" autocomplete="off">Toggle button</button>
 </div>
 
-<h2>使用 JS 套用方法</h2>
+<h2> 使用 JS 套用方法 </h2>
 
-<p>CDN 中的 bootstrap 可單獨啟用此方法</p>
+<p>CDN 中的 bootstrap 可單獨啟用此方法 </p>
 
 <div class="demo">
   <button type="button" class="btn btn-outline-primary" id="myButton">Toggle button</button>
 </div>
 <script>
-  // const btn = document.getElementById('myButton');
-  // const bsButton = new bootstrap.Button(btn);
+  const btn = document.getElementById('myButton');
+  const bsButton = new bootstrap.Button(btn);
 
-  // btn.addEventListener('click', function() {
-  //   bsButton.toggle();
-  // });
+  btn.addEventListener('click', function() {
+    bsButton.toggle();
+  });
 </script>
 
 
-<h2>搭配 Webpack 運作</h2>
+<h2> 搭配 Webpack 運作 </h2>
 
-<p>在 Webpack 中，所有的 JS 都建議使用模組的方式引入，此方法較為進階，建議有 ESM 相關知識後再行學習即可。</p>
+<p> 在 Webpack 中，所有的 JS 都建議使用模組的方式引入，此方法較為進階，建議有 ESM 相關知識後再行學習即可。</p>
 
 <div class="demo">
   <button type="button" class="btn btn-outline-primary" id="myButton2">Toggle button</button>
@@ -38,13 +38,13 @@
 <script type="module">
   // 注意：此引入方式，可能會影響到 CDN 的載入運作
   // 警告：開啟後，也會導致「練習手冊的右側選單無法展開」
-  // import { Button } from '../javascripts/bootstrap.esm.js';
-  // const btn = document.getElementById('myButton2');
-  // const bsButton = new Button(btn);
+  import { Button } from '../javascripts/bootstrap.esm.js';
+  const btn = document.getElementById('myButton2');
+  const bsButton = new Button(btn);
 
-  // btn.addEventListener('click', function() {
-  //   bsButton.toggle();
-  // });
+  btn.addEventListener('click', function() {
+    bsButton.toggle();
+  });
 
 
   // 說明：
@@ -94,7 +94,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -107,7 +107,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -135,7 +135,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
