--- a/bs-javascript/js-init.html
+++ b/bs-javascript/js-init.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>建立實體方法</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title > 建立實體方法 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">建立實體方法</h1><small>檔名：<code>js-init.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted"> 建立實體方法 </h1><small > 檔名：<code>js-init.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>使用建構函式調用 Bootstrap 方法</h2>
+<h2> 使用建構函式調用 Bootstrap 方法 </h2>
 
 <div class="demo">
   <p>
@@ -18,7 +18,15 @@
 </div>
 
 <script>
+  let collapseBlock = document.querySelector("#collapseExample");
 
+  let collapse = new bootstrap.Collapse(collapseBlock, {
+    toggle: false
+  });
+  let btn = document.querySelector("#btn");
+  btn.addEventListener("click",function(){
+    collapse.toggle();
+  })
 </script>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -61,7 +69,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -74,7 +82,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -102,7 +110,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
