--- a/bs-javascript/options-methods-events.html
+++ b/bs-javascript/options-methods-events.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>選項、方法與事件</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title > 選項、方法與事件 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">選項、方法與事件</h1><small>檔名：<code>options-methods-events.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted"> 選項、方法與事件 </h1><small > 檔名：<code>options-methods-events.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <ul>
-  <li>options：建立實體時所傳入的參數</li>
-  <li>methods：實體建立以後可以調用的方法</li>
-  <li>events：實體方法觸發時的監聽事件</li>
+  <li>options：建立實體時所傳入的參數 </li>
+  <li>methods：實體建立以後可以調用的方法 </li>
+  <li>events：實體方法觸發時的監聽事件 </li>
 </ul>
 
 <div class="demo">
@@ -40,8 +40,34 @@
 
 <script>
   const modal = document.querySelector('#exampleModal'); // Modal
-  const btn = document.querySelector('#btnForModal'); // 開啟 Modal 按鈕
-  const btnDispose = document.querySelector('#btnForDispose'); // 卸載 Modal 按鈕
+  const btn = document.querySelector ('#btnForModal'); // 開啟 Modal 按鈕
+  const btnDispose = document.querySelector ('#btnForDispose'); // 卸載 Modal 按鈕
+
+  // #1 建立 Modal 實體
+  let bsModal = new bootstrap.Modal(modal, {
+    backdrop: false
+   });
+ 
+  // #2 查看方法
+  btn.addEventListener('click', function(){
+    bsModal.show();
+    setTimeout(function(){
+      bsModal.hide();
+    }, 3000);
+  });
+  // #3 卸載
+  btnDispose.addEventListener('click', function(){
+    bsModal.dispose();
+  })
+
+  // #4 事件
+  modal.addEventListener('shown.bs.modal', function(){
+    console.log('modal is shown');
+  });
+  modal.addEventListener('hidden.bs.modal', function(){
+    console.log('modal is hidden');
+  });
+  
 </script>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -84,7 +110,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -97,7 +123,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -125,7 +151,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
