--- a/bs-javascript/jquery-bs-methods.html
+++ b/bs-javascript/jquery-bs-methods.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><html lang="zh-TW"><head><title>jQuery 呼叫 Bootstrap 方法</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
+<!DOCTYPE html><html lang="zh-TW"><head><title>jQuery 呼叫 Bootstrap 方法 </title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">jQuery 呼叫 Bootstrap 方法</h1><small>檔名：<code>jquery-bs-methods.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">jQuery 呼叫 Bootstrap 方法 </h1><small > 檔名：<code>jquery-bs-methods.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
-<h2>十年不敗 jQuery</h2>
+<h2> 十年不敗 jQuery</h2>
 
 <div class="demo">
   <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
@@ -24,7 +24,16 @@
 <!-- 首先：一定要記得載入 jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
 <script>
+  $(function(){
+    const bsToast = new bootstrap.Toast($("#liveToast"));
+    $("#liveToastBtn").on('click',function(){
+      bsToast.show();
+    });
 
+    $("#liveToast").on('shown.bs.toast',function(){
+      console.log('toast is shown');
+    });
+  });
 </script>
 
 
@@ -44,7 +53,12 @@
 </div>
 
 <script>
+$(function(){
+  $('[data-bs-toggle="tooltip"]').each(function(index, element){
+    new bootstrap.Tooltip($(element));
+  })
 
+});
 </script>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -87,7 +101,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -100,7 +114,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -128,7 +142,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
